# lms-batch-enrollment

./: MANIFEST.in  README.md  pyproject.toml
tests/: test_meta_filter.py
tutor_userops/: __init__.py  plugin.py
tutor_userops/patches/: openedx-lms-common-settings  openedx-lms-env-features  openedx-lms-urls
userops/: __init__.py  apps.py  urls.py  urls_api.py  views.py
userops/api/: __init__.py  permissions.py  serializers.py  views.py  views_metadata.py
userops/services/: __init__.py  bulk_enroll.py  meta_filter.py
userops/static/userops/: dashboard.css  dashboard.js
userops/templates/userops/: dashboard.html
