[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "userops"
version = "0.1.0"
description = "Open edX Django app for metadata-based user preview and bulk enrollment"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "UserOps"}]
dependencies = [
  "djangorestframework>=3.14.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["userops*"]

[project.entry-points."lms.djangoapp"]
userops = "userops.apps:UserOpsConfig"
